# proyectoELO330

./: .dockerignore  .env.example  .gitignore  Dockerfile  INSTALL.md  Makefile  QUICKSTART.md  README.md  chat.c  test_upload.txt
.github/workflows/: release.yml
c-client/: Makefile  README.md  chat_client.c  client
chat-server/: .dockerignore  Dockerfile  go.mod  main.go
conference-server/: go.mod  main.go
conference-server/conference/: conference.proto
go-client/: audio_streamer.go  audio_streamer_unix.go  audio_streamer_windows.go  file_transfer.go  go.mod  main.go  run-client.sh
go-client/chat/: chat.proto
java-client/: dependency-reduced-pom.xml  pom.xml  run.sh
java-client/src/main/java/com/chat/client/: AudioStreamer.java  ChatClient.java  ChatClient.java.backup  FileTransferManager.java
java-client/src/main/java/com/conference/client/: AudioStreamer.java  ChatClient.java  FileTransferManager.java
python-client/: README.md  audio_streamer.py  chat_client.py  generate_proto.sh  pyproject.toml  requirements.txt
rust-client/: Cargo.toml
rust-client/src/: audio_streamer.rs  main.rs
